2003-09-05  Erik Petrich <epetrich@ivorytower.norman.ok.us>
	* src/SDCCast.c (isConformingBody): fixed loop reversal bug
	reported in bug #800609

2003-09-04  Vangelis Rokas <vrokas@otenet.gr>
	* Top header beautifications in src/pic16 directory:
	  device.c, device.h, gen.c, gen.h, genarith.c, glue.c, pcode.c,
	  pcodeflow.c, pcodeflow.h, pcode.h, pcodepeep.c, pcoderegs.c,
	  pcoderegs.h, ralloc.c, ralloc.h
	* main.c: added top header and GPL license notice
	* pcode.c: fixed the if-conditional warning
 
2003-09-04  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_mullong.c: replaced int by short for gcc

2003-08-31  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCpeeph.c (notVolatile, notVolatileVariable): handle IFX
        and JUMPTABLE iCodes properly now (worked by accident before)
	* src/mcs51/gen.c (leftRightUseAcc),
	* src/ds390/gen.c (leftRightUseAcc): handle IFX and JUMPTABLE
	iCode properly now. Use getSize instead of nRegs since a & b
	aren't part of the nRegs tally. 

2003-08-31  Vangelis Rokas <vrokas@otenet.gr>
	* src/pic16/main.c: corrected offsets of interrupt vectors in _pic16_genIVT()
	* src/pic16/pcode.c: fix to disable inserting BANKSEL directive
	  before instructions that use the _STATUS register

2003-08-31  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (freeAsmop): fixed off by one in stack offset (AOP_STK)
	* src/mcs51/gen.c (genNearPointerSet): added missing opcode for
	fetching of the pointer
	* src/mcs51/gen.c (genNearPointerGet): added reuse of PREG,
	copied from genNearPointerSet()
	* src/mcs51/gen.c (genNearPointerGet): don't pop r0/r1, if RESULTONSTACK
	* src/mcs51/gen.c: changed order of freeAsmop(left/right/result)-calls.
	If they pop r0/r1 they must be called in the opposite order than aopOp().
	* device/lib/_mullong.c: fixed for "--model-large --int-long-reent"
	(resp. --stack-auto), prepared for --xstack

2003-08-28  Frieder Ferlemann <Frieder.Ferlemann@web.de>
