@@ -1,3 +1,8 @@
+2003-09-06  Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCicode.c (ast2iCode): fixed differences in iCode with different
+	compilers
+
 2003-09-05  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 	* src/SDCCast.c (isConformingBody): fixed loop reversal bug
 	reported in bug #800609
